Fixed markup of zoomin imgpanel, added closing functionality, fixed break in zoomin.js

--- a/components/sass/_gallery.scss
+++ b/components/sass/_gallery.scss
@@ -2,17 +2,45 @@
 // ==============
 
 #imgPanel {
-    display: block;
+    .lightboxcontainer {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+    }
     position: fixed;
-    z-index: 100;
+    background: rgba(0,0,0, 0.9);
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
-    height: 0%;
-    transition-property: width;
-    transition-duration: 0.3s;
+    display: none;
+    z-index: 1000;
 }
+
+#imgPanel .close {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+    color: $grey;
+    text-decoration: none;
+    transition: 0.3s;
+    z-index: 9;
+    cursor: pointer;
+    overflow: hidden;
+    text-shadow: 0px 0px 3px #6d6d6d;
+    -webkit-transition: all ease 200ms;
+    -moz-transition: all ease 200ms;
+    -o-transition: all ease 200ms;
+    transition: all ease 200ms;
+}
+#imgPanel a:hover, #imgPanel a:focus {
+    color: $white;
+}
+
 #lightbox {
     height: 100%;
+    margin: 0 auto;
 }
 
 .gallerycontainer {
